--- a/ARDesktop.vcproj
+++ b/ARDesktop.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="freeglut\include;C:\OculusSDK\LibOVR\include;C:\Development"
+				AdditionalIncludeDirectories="freeglut\include;C:\OculusSDK\LibOVR\include;C:\Development;ovrvision\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -61,9 +61,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="libovrd.lib"
+				AdditionalDependencies="libovrd.lib ovrvision.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="freeglut\lib;C:\OculusSDK\LibOVR\Lib\Win32"
+				AdditionalLibraryDirectories="freeglut\lib;C:\OculusSDK\LibOVR\Lib\Win32;ovrvision\bin\x86"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -184,6 +184,10 @@
 				RelativePath=".\ScreenCapture.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\StereoCamera.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -192,6 +196,10 @@
 			>
 			<File
 				RelativePath=".\ScreenCapture.h"
+				>
+			</File>
+			<File
+				RelativePath=".\StereoCamera.h"
 				>
 			</File>
 		</Filter>
